refactored entire strateg-engine except backtest service + watchmaker